apdate to spring 2025

--- a/2024.html
+++ b/2024.html
@@ -33,7 +33,7 @@
 					<nav>
 						<ul>
 							<li><a href="/">BERANDA</a></li>
-							<li><a href="summer2024.html">GARAPAN MUSIM INI</a></li>
+							<li><a href="spring2025.html">GARAPAN MUSIM INI</a></li>
 							<li><a href="lawas.html">GARAPAN LAMA</a></li>
 							<li><a href="https://panel.naoti.me/embed?id=206398682172489728#accent=yellow">STATUS GARAPAN</a></li>
 							<li><a href="https://trakteer.id/caramelfansub">MAU DONASI?</a></li>
@@ -60,9 +60,10 @@
 								<li>
 								<a href="proyek/arsip-biru.html" a class="button scrolly">Blue Archive</a>
 								<a href="proyek/aipri.html" a class="button scrolly">Himitsu no AiPri</a>
+								<a href="proyek/dahlia.html" a class="button scrolly">Madougushi Dahlia wa Utsumukanai</a>
 								<a href="proyek/holo-remake.html" a class="button scrolly">Ookami to Koushinryou</a>
 								<a href="proyek/sasakoi.html" a class="button scrolly">Sasayaku You ni Koi wa Utau</a>
-								<a href="proyek/kemah-santai-s3.html" a class="button scrolly">Yuru Camp△ Season 3</a>
+								<a href="proyek/roshidere.html" a class="button scrolly">Tokidoki Bosotto Russia-go de Dereru Tonari no Alya-san</a>
 							</li>
 							</ul>
 						</div>
