--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<ul class="actions">
 								<li>
 								<a href="http://caramel.web.id/" class="button scrolly">SITUS UTAMA</a>
-								<a href="summer2024.html" class="button scrolly">GARAPAN MUSIM INI</a>
+								<a href="spring2025.html" class="button scrolly">GARAPAN MUSIM INI</a>
 								<a href="lawas.html" class="button scrolly">GARAPAN LAMA</a>
 								</li>
 							</ul>
