--- a/lawas.html
+++ b/lawas.html
@@ -33,7 +33,7 @@
 					<nav>
 						<ul>
 							<li><a href="/">BERANDA</a></li>
-							<li><a href="summer2024.html">GARAPAN MUSIM INI</a></li>
+							<li><a href="spring2025.html">GARAPAN MUSIM INI</a></li>
 							<li><a href="lawas.html">GARAPAN LAMA</a></li>
 							<li><a href="https://panel.naoti.me/embed?id=206398682172489728#accent=yellow">STATUS GARAPAN</a></li>
 							<li><a href="https://trakteer.id/caramelfansub">MAU DONASI?</a></li>
@@ -59,7 +59,8 @@
 							<br>
 							<ul class="actions">
 								<li>
-								<a href="spring2024.html" a class="button scrolly">Spring 2024</a>	
+								<a href="spring2025.html" a class="button scrolly">2025</a>
+								<a href="2024.html" a class="button scrolly">2024</a>	
 								<a href="2023.html" a class="button scrolly">2023</a>
 								<a href="2022.html" a class="button scrolly">2022</a>
 								<a href="2021.html" a class="button scrolly">2021</a>
@@ -67,7 +68,7 @@
 								<a href="2019.html" a class="button scrolly">2019</a>
 								<a href="2018.html" a class="button scrolly">2018</a>
 								<a href="2017.html" a class="button scrolly">2017</a>
-								<a href="lawas2.html" a class="button scrolly">Sebelum 2017</a>
+								<a href="lawas.html" a class="button scrolly">Sebelum 2017</a>
 								<a href="other.html" a class="button scrolly">Movie/OVA/Lainnya</a>
 								<a href="mv-pv.html" a class="button scrolly">MV/PV</a></li>
 							</ul>
