--- a/spring2025.html
+++ b/spring2025.html
@@ -33,7 +33,7 @@
 					<nav>
 						<ul>
 							<li><a href="/">BERANDA</a></li>
-							<li><a href="summer2024.html">GARAPAN MUSIM INI</a></li>
+							<li><a href="spring2025.html">GARAPAN MUSIM INI</a></li>
 							<li><a href="lawas.html">GARAPAN LAMA</a></li>
 							<li><a href="https://panel.naoti.me/embed?id=206398682172489728#accent=yellow">STATUS GARAPAN</a></li>
 							<li><a href="https://trakteer.id/caramelfansub">MAU DONASI?</a></li>
@@ -58,10 +58,9 @@
 						<div class="inner">
 							<ul class="actions">
 								<li>
-								<a href="proyek/aipri.html" a class="button scrolly">Himitsu no AiPri</a>
-								<a href="proyek/holo-remake.html" a class="button scrolly">Ookami to Koushinryou</a>
-								<a href="proyek/dahlia.html" a class="button scrolly">Madougushi Dahlia wa Utsumukanai</a>
-								<a href="proyek/roshidere.html" a class="button scrolly">Tokidoki Bosotto Russia-go de Dereru Tonari no Alya-san</a>
+								<a href="proyek/gquuuuuux.html" a class="button scrolly">Mobile Suit Gundam GQuuuuuuX</a>
+								<a href="proyek/kemah-santai-s3.html" a class="button scrolly">???</a>
+								<a href="proyek/kemah-santai-s3.html" a class="button scrolly">???</a>
 							</li>
 							</ul>
 						</div>
