add gquuuuuux epi 1

--- a/proyek/gquuuuuux.html
+++ b/proyek/gquuuuuux.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>[Kana] Oshi no Ko | Arsip</title>
+		<title>[Machu] Mobile Suit Gundam GQuuuuuuX | Arsip</title>
 		<link href="../images/066.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -36,7 +36,7 @@
 									<align="left"><h2>Mobile Suit Gundam GQuuuuuuX - Takarir Indonesia</h2>
 									<br>
 										<div class="image left" style="clear: both; text-align: center;">
-											<img border="0" height="316" src="https://cdn.myanimelist.net/images/anime/1472/143303l.jpg" width="225" />
+											<img border="0" height="316" src="https://cdn.myanimelist.net/images/anime/1052/148743l.jpg" width="225" />
 										</div>
 										<br>
 								<p class="relawan">Skrip: Simulcast (Modified)
