--- a/proyek/gquuuuuux.html
+++ b/proyek/gquuuuuux.html
@@ -57,6 +57,14 @@
 										<a href="https://safefileku.com/download/5HbTx2enKtxziGRK" class="button"> Safefileku </a>
 										<a href="https://1024terabox.com/s/1OxFaXI571dZYSWzffqnHkw" class="button"> Terabox </a>
 										</p></li>
+										<li><a class="button">Episode - 2</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://drive.google.com/file/d/1snLZatMtr9eIT-OXzNKeKQ0yuD9q_13g/view?usp=sharing" class="button"> GDrive</a>
+										<a href="https://buzzheavier.com/bbyjq3yeca53" class="button"> Buzzheavier </a>
+										<a href="https://safefileku.com/download/y59r3HBjZ1zJUlah" class="button"> Safefileku </a>
+										<a href="https://1024terabox.com/s/1QWtG8Gdhvl-rWygHPHrJvw" class="button"> Terabox </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
