--- a/proyek/gquuuuuux.html
+++ b/proyek/gquuuuuux.html
@@ -65,6 +65,14 @@
 										<a href="https://safefileku.com/download/y59r3HBjZ1zJUlah" class="button"> Safefileku </a>
 										<a href="https://1024terabox.com/s/1QWtG8Gdhvl-rWygHPHrJvw" class="button"> Terabox </a>
 										</p></li>
+										<li><a class="button">Episode - 3</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://drive.google.com/file/d/188rU9bjSyugLN5hI2DmsdybUYh8gZaFq/view?usp=sharing" class="button"> GDrive</a>
+										<a href="https://buzzheavier.com/0su9npmgfxih" class="button"> Buzzheavier </a>
+										<a href="https://safefileku.com/download/r14oIh4mCVNU5IJ1" class="button"> Safefileku </a>
+										<a href="https://1024terabox.com/s/1goV4HrS4F6KUqzU02NzYWw" class="button"> Terabox </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
